feat(dump): bearer auth middleware for create endpoint (#14)
* feat(dump): bearer auth middleware for create endpoint

fix(helm): added helm dir to prettier ignore
feat(dump): added bearer auth middleware for create endpoint

* refactor(dump): refactored according to pr
