# src/dumpMetadata/routes/dumpMetadataRouter.ts
@@ -1,13 +1,16 @@
 import { Router } from 'express';
 import { FactoryFunction } from 'tsyringe';
+
 import { DumpMetadataController } from '../controllers/dumpMetadataController';
+import { RequestBearerAuth } from '../../common/middlewares/bearerAuthentication';
 
 const dumpMetadataRouterFactory: FactoryFunction<Router> = (dependencyContainer) => {
   const router = Router();
   const controller = dependencyContainer.resolve(DumpMetadataController);
+  const requestAuth = dependencyContainer.resolve(RequestBearerAuth);
 
   router.get('/', controller.getByFilter);
-  router.post('/', controller.post);
+  router.post('/', requestAuth.getBearerAuthMiddleware(), controller.post);
   router.get('/:dumpId', controller.getById);
 
   return router;
